# CMakeModul25

./: CMakeLists.txt  CMakeModul25.cpp  main_header.h
exercise1/include/: header_ex1.h
exercise1/src/: CMakeLists.txt  mod25ex1.cpp
exercise2/include/: header_disk.h  header_ex2.h  header_gpu.h
exercise2/src/: CMakeLists.txt  disk.cpp  gpu.cpp  kbd.cpp  mod25ex2.cpp  split.cpp  structPoint.cpp
include/: header_cpu.h  header_disk.h  header_gpu.h  header_kbd.h  header_modul25.h  header_ram.h  main_header.h
main/include/: main_header.h
main/src/: CMakeLists.txt  CMakeModul25.cpp
src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  mod25ex1.cpp  mod25ex2.cpp  ram.cpp  split.cpp  structPoint.cpp
